samples/_failures_safe/1761796885_3d49aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_265c4201.c: In function ‘main’:
./samples/SAFE/__tmp_265c4201.c:136:47: error: expected ‘;’ at end of input
  136 |     if (len > 0 && input[len-1] == '\n') input
      |                                               ^
      |                                               ;
./samples/SAFE/__tmp_265c4201.c:136:5: error: expected declaration or statement at end of input
  136 |     if (len > 0 && input[len-1] == '\n') input
      |     ^~
